# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ABSEIL_DIR = get_path_info("../..", "abspath")
print("ABSEIL_DIR = ", ABSEIL_DIR)

ABSL_DEFAULT_COPTS = [
  "-Wall",
  "-Wextra",
  "-Weverything",
  "-Wno-c++98-compat-pedantic",
  "-Wno-conversion",
  "-Wno-covered-switch-default",
  "-Wno-deprecated",
  "-Wno-disabled-macro-expansion",
  "-Wno-double-promotion",
  "-Wno-comma",
  "-Wno-extra-semi",
  "-Wno-extra-semi-stmt",
  "-Wno-packed",
  "-Wno-padded",
  "-Wno-sign-compare",
  "-Wno-float-conversion",
  "-Wno-float-equal",
  "-Wno-format-nonliteral",
  "-Wno-gcc-compat",
  "-Wno-global-constructors",
  "-Wno-exit-time-destructors",
  "-Wno-non-modular-include-in-module",
  "-Wno-old-style-cast",
  "-Wno-range-loop-analysis",
  "-Wno-reserved-id-macro",
  "-Wno-shorten-64-to-32",
  "-Wno-switch-enum",
  "-Wno-thread-safety-negative",
  "-Wno-unknown-warning-option",
  "-Wno-unreachable-code",
  "-Wno-unused-macros",
  "-Wno-weak-vtables",
  "-Wno-zero-as-null-pointer-constant",
  "-Wbitfield-enum-conversion",
  "-Wbool-conversion",
  "-Wconstant-conversion",
  "-Wenum-conversion",
  "-Wint-conversion",
  "-Wliteral-conversion",
  "-Wnon-literal-null-conversion",
  "-Wnull-conversion",
  "-Wobjc-literal-conversion",
  "-Wno-sign-conversion",
  "-Wstring-conversion",
  "-DNOMINMAX",
]
