# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../copts/configure_copts.gni")
import("//developtools/profiler/build/config.gni")

config("cflags_config") {
  cflags = ABSL_DEFAULT_COPTS
}

ohos_shared_library("absl_stacktrace") {
  sources = [
    "internal/stacktrace_aarch64-inl.inc",
    "internal/stacktrace_arm-inl.inc",
    "internal/stacktrace_config.h",
    "internal/stacktrace_generic-inl.inc",
    "internal/stacktrace_powerpc-inl.inc",
    "internal/stacktrace_unimplemented-inl.inc",
    "internal/stacktrace_win32-inl.inc",
    "internal/stacktrace_x86-inl.inc",
    "stacktrace.cc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  deps = [ ":absl_debugging_internal" ]
  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}

ohos_shared_library("absl_symbolize") {
  sources = [
    "symbolize.cc",
    "symbolize_darwin.inc",
    "symbolize_elf.inc",
    "symbolize_unimplemented.inc",
    "symbolize_win32.inc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  # cflags = ABSL_DEFAULT_COPTS
  configs = [ ":cflags_config" ]

  deps = [
    ":absl_debugging_internal",
    ":absl_demangle_internal",
    "${ABSEIL_DIR}/absl/base:absl_base",
    "${ABSEIL_DIR}/absl/base:absl_malloc_internal",
    "${ABSEIL_DIR}/absl/base:absl_raw_logging_internal",
    "${ABSEIL_DIR}/absl/strings:absl_strings",
  ]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}

ohos_shared_library("absl_debugging_internal") {
  sources = [
    "internal/address_is_readable.cc",
    "internal/elf_mem_image.cc",
    "internal/vdso_support.cc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  deps = [ "${ABSEIL_DIR}/absl/base:absl_raw_logging_internal",
    "${ABSEIL_DIR}/absl/base:absl_dynamic_annotations",
  ]

  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}

ohos_shared_library("absl_demangle_internal") {
  sources = [ "internal/demangle.cc" ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}
