# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../copts/configure_copts.gni")
import("//developtools/profiler/build/config.gni")

ohos_shared_library("absl_int128") {
  sources = [
    "int128.cc",
    "int128_have_intrinsic.inc",
    "int128_no_intrinsic.inc",
  ]
  include_dirs = [ "../../" ]

  cflags = ABSL_DEFAULT_COPTS
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}
