# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../copts/configure_copts.gni")
import("//developtools/profiler/build/config.gni")

ohos_shared_library("absl_graphcycles_internal") {
  sources = [ "internal/graphcycles.cc" ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS
  deps = [
    "${ABSEIL_DIR}/absl/base:absl_base",
    "${ABSEIL_DIR}/absl/base:absl_malloc_internal",
    "${ABSEIL_DIR}/absl/base:absl_raw_logging_internal",
  ]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}

ohos_shared_library("absl_synchronization") {
  sources = [
    "barrier.cc",
    "blocking_counter.cc",
    "internal/create_thread_identity.cc",
    "internal/per_thread_sem.cc",
    "internal/waiter.cc",
    "mutex.cc",
    "notification.cc",
  ]

  include_dirs = [ "${ABSEIL_DIR}/" ]

  cflags = ABSL_DEFAULT_COPTS
  deps = [
    ":absl_graphcycles_internal",
    "${ABSEIL_DIR}/absl/base:absl_base",
    "${ABSEIL_DIR}/absl/base:absl_malloc_internal",
    "${ABSEIL_DIR}/absl/base:absl_raw_logging_internal",
    "${ABSEIL_DIR}/absl/base:absl_spinlock_wait",
    "${ABSEIL_DIR}/absl/debugging:absl_stacktrace",
    "${ABSEIL_DIR}/absl/debugging:absl_symbolize",
    "${ABSEIL_DIR}/absl/time:absl_time",
  ]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}
