# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../copts/configure_copts.gni")
import("//developtools/profiler/build/config.gni")

ohos_shared_library("absl_time") {
  sources = [
    "civil_time.cc",
    "clock.cc",
    "duration.cc",
    "format.cc",
    "internal/get_current_time_chrono.inc",
    "internal/get_current_time_posix.inc",
    "time.cc",
  ]
  include_dirs = [ "../../" ]

  cflags = ABSL_DEFAULT_COPTS

  public_deps = [
    "${ABSEIL_DIR}/absl/base:absl_base",
    "${ABSEIL_DIR}/absl/base:absl_raw_logging_internal",
    "${ABSEIL_DIR}/absl/numeric:absl_int128",
    "${ABSEIL_DIR}/absl/strings:absl_strings",
    "${ABSEIL_DIR}/absl/time/internal/cctz:absl_civil_time",
    "${ABSEIL_DIR}/absl/time/internal/cctz:absl_time_zone",
  ]
  install_enable = true
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
}
